# Ollama3.1

./: .gitignore  Dockerfile  docker-compose.yml  env_info.txt  pyproject.toml
src/: index.html  rag.py
